resolved business show alignment issue, review buttons added

--- a/app/assets/stylesheets/business_show.css
+++ b/app/assets/stylesheets/business_show.css
@@ -7,12 +7,11 @@
 }
 
 .business-header-container {
-    width: 996px;
+    width: 990px;
     height: 40px;
     display: flex;
     justify-content: center;
-    margin-left: 97px;
-    margin-right: 97px;
+    margin: 0 auto;
     border-spacing: 18px 0;
     border-collapse: separate;
     display: flex;
@@ -157,12 +156,11 @@
 }
 
 .business-show-categories-container{
-    width: 996px;
+    width: 990px;
     height: 40px;
     display: flex;
     justify-content: center;
-    margin-left: 97px;
-    margin-right: 97px;
+    margin: 0 auto;
     border-spacing: 18px 0;
     border-collapse: separate;
     display: flex;
@@ -218,13 +216,110 @@
 }
 
 .categories-review {
-    width: 156px;
+    width: 150px;
     height: 40px;
     
 }
 
 .categories-business {
-    width: 159px;
+    width: 148px;
     height: 40px;
     
 }
+
+.business-main-content-container{
+    min-width: 990px;
+    overflow: hidden;
+    z-index: 1px;
+    padding-bottom: 24px; 
+    margin-bottom: -18px;
+    background: #f5f5f5;
+}
+
+.business-content-container {
+    width: 960px;
+    margin: 0 auto;
+    
+    padding: 15px 15px;
+    
+}
+
+.actual-business-header {
+    width: 960px;
+    height: 112px;
+    color: #333333;
+    font-size: 16px;
+    font-family: "Helvetica Neue";
+    display: flex;
+    
+    
+}
+
+.business-name-header {
+    width: 555px;
+    height: 112px;
+    padding: 0px 30px 0px 0xp;
+}
+
+.business-name {
+    width: 525px;
+    height: 42px;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.business-ratings {
+    width: 525px;
+    height: 24px;
+}
+
+.business-review-header {
+    width: 405px;
+    height: 37px;
+    line-height: 84px;
+    
+}
+
+.business-review-header button {
+    font-family: "Helvetica Neue";
+    font-weight: bold;
+    
+}
+
+.write-a-review-button {
+    background: #d32323;
+    color: white;
+    border-radius: 3px;
+    width: 159.27px;
+    height: 36px;
+    font-size: 14px;
+    font-weight: 600;
+    margin-right: 30px;
+   
+}
+
+.add-photo-button {
+    width: 99.56px;
+    height: 30.91px;
+    color: #666666;
+    background: #ffffff;
+    font-size: 12px;
+   border-radius: 1px;
+    
+}
+
+.share-photo-button {
+    width: 70.48px;
+    height: 30.91px;
+    font-size: 12px;
+    border-radius: 1px;
+}
+
+
+.save-button {
+    width: 63.14;
+    height: 30.91px;
+    font-size: 12px;
+    border-radius: 1px;
+}
+  
